--- a/robot/package.json
+++ b/robot/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "robot.js",
   "dependencies": {
-    "ev3dev": "^0.9.1"
+    "body-parser": "^1.10.1",
+    "ev3dev": "^0.9.1",
+    "express": "^4.11.0"
   },
   "devDependencies": {},
   "scripts": {
